[project]
name = "meta-ai-api"
version = "0.1.0"
description = "Interact with the Meta AI API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "requests-html>=0.10.0",
    "lxml_html_clean>=0.1.1",
    "bs4>=0.0.2"
]

[project.scripts]
meta-ai = "meta_ai_api.cli:main"
